--- a/css/index.css
+++ b/css/index.css
@@ -24,3 +24,12 @@ body{
     max-width: 15%;
     margin:15px;
 }
+
+#imgContainer img:hover{
+    -webkit-filter: brightness(75%);
+    -webkit-transition: all 0.75s ease-in-out;
+    -moz-transition: all 0.75s ease-in-out;
+    -o-transition: all 0.75s ease-in-out;
+    -ms-transition: all 0.75s ease-in-out;
+    transition: all 0.75s ease-in-out;
+}
