--- a/css/index.css
+++ b/css/index.css
@@ -26,10 +26,10 @@ body{
 }
 
 #imgContainer img:hover{
-    -webkit-filter: brightness(75%);
-    -webkit-transition: all 0.75s ease-in-out;
-    -moz-transition: all 0.75s ease-in-out;
-    -o-transition: all 0.75s ease-in-out;
-    -ms-transition: all 0.75s ease-in-out;
-    transition: all 0.75s ease-in-out;
+    -webkit-filter: brightness(50%);
+    -webkit-transition: all 0.15s;
+    -moz-transition: all 0.15s;
+    -o-transition: all 0.15s;
+    -ms-transition: all 0.15s;
+    transition: all 0.15s;
 }
